#65 init List differently